<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_buy"
        android:title="Buy"
        android:icon="@drawable/ic_cart_plus_white_24dp"
        app:showAsAction="always|withText" />
    <item android:id="@+id/shopping_cart"
        android:title="View Cart"
        android:icon="@drawable/ic_cart_white_24dp"
        app:showAsAction="always|withText"/>
</menu>